[gd_scene load_steps=5 format=3 uid="uid://dkh431mq01asj"]

[ext_resource type="Script" uid="uid://ssdh46l156uq" path="res://scripts/pause.gd" id="1_r8yp4"]
[ext_resource type="FontFile" uid="uid://bppv5xyiyrnkw" path="res://assets/fonts/PixelOperator8.ttf" id="2_m0klm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aicil"]
bg_color = Color(0.31210235, 0.62440914, 0.8940493, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r8yp4"]

[node name="Pause" type="CanvasLayer"]
script = ExtResource("1_r8yp4")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -405.5
offset_top = -267.0
offset_right = 405.5
offset_bottom = 267.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 0.47058824)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.5
offset_top = -121.0
offset_right = 180.5
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_m0klm")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_aicil")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r8yp4")
text = "Resume"

[node name="Save" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_m0klm")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_aicil")
theme_override_styles/pressed = SubResource("StyleBoxFlat_r8yp4")
text = "Save"

[node name="Back_to_menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_m0klm")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_aicil")
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Back_to_menu" to="." method="_on_back_to_menu_pressed"]
